fix image stretch, about us

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -173,15 +173,19 @@ footer {
     }
     .footer-investors__img-container {
       margin-top: 6.125rem;
-      display: flex;
-      justify-content: space-around;
+      // display: flex;
+      // flex-direction: row;
+      // justify-content: space-around;
       padding-left: 85px;
       padding-right: 85px;
 
       img {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 25px;
+        margin-right: 25px;
         margin-bottom: 55px;
+
+        // height: 33px;
+        // height: 73px;
       }
 
       @include respond-to(mobile) {
